# vishmux

./: .gitignore  README.md  __init__.py  config.py  install.sh  pyproject.toml
.github/workflows/: keepalive.yml
cli/: __init__.py  config.py  main.py  requirements.txt  setup_wizard.py  web_search.py
cli/agent/: __init__.py  loop.py  planner.py  summarizer.py  telegram_listener.py
cli/providers/: __init__.py  anthropic.py  base.py  gemini.py  groq.py  mistral.py  nvidia.py  openrouter.py  perplexity.py  together.py
cli/session/: __init__.py  exit_handler.py  manager.py
cli/tools/: __init__.py  adb_tool.py  agent_tools.py  file_tool.py  manager.py  render_sync.py  task_tool.py  telegram_listener.py  telegram_tool.py  web_search.py
cli/ui/: __init__.py  display.py  streaming.py
render-server/: ai_client.py  ai_settings.py  chat_relay.py  config.py  main.py  requirements.txt  scheduler.py  search_client.py  supabase_client.py  telegram_sender.py
