[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vishmux"
version = "0.4.0"
description = "Free local AI agent CLI — like Claude Code, but yours"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
vishmux = "cli.main:cli_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
